@@ -3,6 +3,7 @@ Version 5.9.10
 - Added __HAVE_FCACHE__ define if FCACHE is enabled (also contributed by Ada)
 - Added --nostdlib flag to suppress default include files
 - Added KILL function to delete files in BASIC
+- Added ELSE clause to single line IF in BASIC
 - Actually fail compilation if a preprocessor #error directive is found in Spin
 - Fixed some bugs in time related functions
 - Fixed FCACHE not being enabled during system module compilation
